src/test/compile-fail/binop-sub-obj.rs
// error-pattern:- cannot be applied to type `obj

fn main() { let x = obj () {  } - obj () {  }; }